# scout

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  AISCORE_LOGGING_IMPROVEMENTS.md  ARCHITECTURE_SUGGESTIONS.md  ARCHITECTURE_TIMELINE.md  AUTOMATIC_COMPRESSION.md  CLICKHOUSE_OPTIMIZATION_UPDATE.md  CODE_REVIEW.md  CODE_REVIEW_SUGGESTIONS.md  COMPREHENSIVE_CODE_REVIEW.md  CONFIGURATION_COMPARISON.md  CONFIG_GUIDE.md  DATA_QUALITY_IMPLEMENTATION_TIMELINE.md  DEPTHMARK_PROJECT_STRUCTURE.md  DEVELOPMENT.md  DEVELOPMENT_ARCHITECTURE.md  DOCUMENTATION.md  Dockerfile  EXPERT_CODE_REVIEW.md  HOW_TO_RUN.md  IMPLEMENTATION_COMPLETE.md  LEAGUE_FILTERING_GUIDE.md  LICENSE  Makefile  PERFORMANCE_PATCH.md  PROJECT_REVIEW.md  README.md  REFACTORING_NOTES.md  REFACTORING_SUMMARY.md  RESTRUCTURE_STEP1.md  RESTRUCTURE_STEP3.md  RESTRUCTURE_STEP4.md  SCRIPTS_AUDIT.md  SCRIPTS_CONTRACT.md  VALIDATION_SYSTEM_SUMMARY.md  config.yaml  credentials.json.example  (+19 more)
access/: fe44d3c2-a625-9665-8090-a608bc804f87.sql  users.list
clickhouse/bronze/: 00_create_database.sql  01_create_tables.sql  01_general.sql  02_optimize.sql  02_timeline.sql  03_venue.sql  04_player.sql  05_shotmap.sql  06_goal.sql  07_cards.sql  08_red_card.sql  09_period.sql  10_momentum.sql  11_starters.sql  12_substitutes.sql  13_coaches.sql  14_team_form.sql  15_match_index.sql  15_match_reference.sql  99_optimize_tables.sql
clickhouse/gold/: 00_create_database.sql  01_create_tables.sql  02_create_scenario_tables.sql  02_create_signal_tables.sql  03_create_match_reference_tables.sql  create_table_match_creativity_playmaking.sql  create_table_match_discipline_cards.sql  create_table_match_goalkeeping_defense.sql  create_table_match_possession_passing.sql  create_table_match_shooting_goals.sql  create_table_player_creativity_playmaking.sql  create_table_player_discipline_cards.sql  create_table_player_goalkeeping_defense.sql  create_table_player_possession_passing.sql  create_table_player_shooting_goals.sql  create_table_signal_activations.sql  create_table_team_creativity_playmaking.sql  create_table_team_discipline_cards.sql  create_table_team_goalkeeping_defense.sql  create_table_team_possession_passing.sql  create_table_team_shooting_goals.sql  scenario_basketball_match.sql  scenario_big_chance_killer.sql  scenario_clinical_finisher.sql  scenario_dead_ball_dominance.sql  scenario_defensive_masterclass.sql  scenario_defensive_shutdown_win.sql  scenario_demolition.sql  scenario_human_shield.sql  scenario_key_pass_king.sql  scenario_last_gasp.sql  scenario_lightning_rod.sql  scenario_line_breaker.sql  scenario_metronome.sql  (+18 more)
config/: __init__.py  aiscore.py  base.py  fotmob.py  settings.py
data/: tennis_matches.db
data/raw/: .gitkeep
docker/: Dockerfile  docker-compose.clickhouse.yml  docker-compose.yml  docker-entrypoint.sh
docs/: DATA_ENGINEERING_PROJECT_REVIEW_2026-05-17.md  DEVELOPMENT_ARCHITECTURE.md  DE_REVIEW_REMEDIATION_PLAN_2026-05-17.md  README.md  SCRIPTS_CONTRACT.md  VALIDATION_QUICKSTART.md  VALIDATION_SYSTEM.md
metadata/: default.sql  fotmob  fotmob.sql  system  system.sql
notebooks/: data_analysis.ipynb
scripts/: README.md  analyze_leagues.py  check_logging_style.py  clickhouse_setup_common.py  drop_clickhouse_databases.py  ensure_directories.py  health_check.py  load_clickhouse.py  pipeline.py  process_gold.py  process_silver.py  refresh_turnstile.py  scrape_aiscore.py  scrape_fotmob.py  setup_clickhouse.py  setup_clickhouse_bronze.py  setup_clickhouse_gold.py  setup_clickhouse_silver.py  test_validation.py  update_fotmob_config.py  validate_fotmob_responses.py
sofa_scrape/: constants.py  match_scraper.py  odds_scraper.py  point_by_point_scraper.py  request_data.py  scraper.py  statistics_scraper.py  tennis_power_scraper.py  tennis_scraper.ipynb  test.ipynb  utils.py  votes_scraper.py
src/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py
(+3094 files in other folders)
